// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingUsage component should display loader 1`] = `
<BillingUsage
  currentUsage={Immutable.Map {}}
  fetchCurrentUsage={[Function]}
>
  <Loader
    inline={false}
    minHeight="500px"
    size="40px"
  >
    <div
      className="container"
    >
      <div
        className="inner"
        style={
          Object {
            "minHeight": "500px",
          }
        }
      >
        <i
          className="icon-custom icon-circle-o-notch md-spin"
          style={
            Object {
              "fontSize": "40px",
            }
          }
        />
      </div>
    </div>
  </Loader>
</BillingUsage>
`;

exports[`BillingUsage component should display price 1`] = `
<BillingUsage
  currentPlan={
    Immutable.Map {
      "name": "Pro",
      "free_tickets": 10,
      "integrations": 5,
      "interval": "month",
    }
  }
  currentSubscription={
    Immutable.Map {
      "start_datetime": "2018-01-01T10:10:10.480Z",
    }
  }
  currentUsage={
    Immutable.Map {
      "meta": Immutable.Map {
        "start_datetime": "2010-10-10",
        "end_datetime": "2010-10-11",
      },
      "data": Immutable.Map {
        "cost": 10,
        "tickets": 20,
      },
    }
  }
  fetchCurrentUsage={[Function]}
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        insert_chart
      </i>
       Usage & Plans
    </h4>
    <CardGroup
      className="mb-2"
      tag="div"
    >
      <div
        className="mb-2 card-group"
      >
        <Card
          className="current-plan Pro"
          tag="div"
        >
          <div
            className="current-plan Pro card"
          >
            <CardBody
              tag="div"
            >
              <div
                className="card-body"
              >
                <LegacyTag
                  className="usagePlans"
                  label="Legacy Plan"
                  labelIcon="warning"
                >
                  <div
                    className="legacyPlanTag usagePlans"
                  >
                    <i
                      className="material-icons"
                    >
                      warning
                    </i>
                    <div
                      className="legacyPlanTagLabel"
                    >
                      Legacy Plan
                    </div>
                  </div>
                </LegacyTag>
                <h4>
                  Pro monthly plan
                </h4>
                <div>
                  Your current subscription started on
                   
                  <strong>
                    Jan 01
                  </strong>
                  .
                </div>
              </div>
            </CardBody>
          </div>
        </Card>
        <Card
          className="text-center"
          tag="div"
        >
          <div
            className="text-center card"
          >
            <CardBody
              tag="div"
            >
              <div
                className="card-body"
              >
                <Row
                  tag="div"
                >
                  <div
                    className="row"
                  >
                    <Col
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="col-sm-3"
                      >
                        <div>
                          <div
                            className="usage-numbers"
                          >
                            20
                            /
                            10
                             tickets
                             
                            <a
                              id="current-period"
                            >
                              <i
                                className="material-icons text-muted"
                              >
                                info_outline
                              </i>
                            </a>
                          </div>
                          <UncontrolledTooltip
                            target="current-period"
                          >
                            <Tooltip
                              autohide={true}
                              delay={
                                Object {
                                  "hide": 250,
                                  "show": 0,
                                }
                              }
                              hideArrow={false}
                              isOpen={false}
                              placement="top"
                              placementPrefix="bs-tooltip"
                              target="current-period"
                              toggle={[Function]}
                            />
                          </UncontrolledTooltip>
                          <Progress
                            className="usage-progress"
                            max={100}
                            multi={true}
                            tag="div"
                            value={0}
                          >
                            <div
                              className="usage-progress progress"
                            >
                              <Progress
                                bar={true}
                                color="primary"
                                max={100}
                                tag="div"
                                value={50}
                              >
                                <div
                                  aria-valuemax={100}
                                  aria-valuemin="0"
                                  aria-valuenow={50}
                                  className="progress-bar bg-primary"
                                  role="progressbar"
                                  style={
                                    Object {
                                      "width": "50%",
                                    }
                                  }
                                />
                              </Progress>
                              <Progress
                                bar={true}
                                color="danger"
                                max={100}
                                tag="div"
                                value={50}
                              >
                                <div
                                  aria-valuemax={100}
                                  aria-valuemin="0"
                                  aria-valuenow={50}
                                  className="progress-bar bg-danger"
                                  role="progressbar"
                                  style={
                                    Object {
                                      "width": "50%",
                                    }
                                  }
                                />
                              </Progress>
                            </div>
                          </Progress>
                          <div>
                            $
                            10
                             extra cost
                          </div>
                        </div>
                      </div>
                    </Col>
                    <Col
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="col-sm-3"
                      >
                        <div>
                          <div
                            className="usage-numbers"
                          >
                            0
                            /
                            5
                             
                            <Link
                              to="/app/settings/integrations"
                            >
                              <a
                                to="/app/settings/integrations"
                              >
                                integrations
                              </a>
                            </Link>
                             
                            <a
                              id="integrations-consumed"
                            >
                              <i
                                className="material-icons text-muted"
                              >
                                info_outline
                              </i>
                            </a>
                            <UncontrolledTooltip
                              target="integrations-consumed"
                            >
                              <Tooltip
                                autohide={true}
                                delay={
                                  Object {
                                    "hide": 250,
                                    "show": 0,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="integrations-consumed"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </div>
                          <Progress
                            className="usage-numbers"
                            max={100}
                            multi={true}
                            tag="div"
                            value={0}
                          >
                            <div
                              className="usage-numbers progress"
                            >
                              <Progress
                                bar={true}
                                color="primary"
                                max={100}
                                tag="div"
                                value={100}
                              >
                                <div
                                  aria-valuemax={100}
                                  aria-valuemin="0"
                                  aria-valuenow={100}
                                  className="progress-bar bg-primary"
                                  role="progressbar"
                                  style={
                                    Object {
                                      "width": "100%",
                                    }
                                  }
                                />
                              </Progress>
                            </div>
                          </Progress>
                        </div>
                      </div>
                    </Col>
                    <Col
                      className="plan-usage-reset"
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="plan-usage-reset col-sm-3"
                      >
                        <div>
                          <strong>
                            Usage reset on:
                          </strong>
                        </div>
                        <div>
                          Oct 11
                        </div>
                      </div>
                    </Col>
                    <Col
                      className="plan-button"
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="plan-button col-sm-3"
                      >
                        <Button
                          color="secondary"
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="button"
                          >
                            Update plan
                          </button>
                        </Button>
                      </div>
                    </Col>
                  </div>
                </Row>
              </div>
            </CardBody>
          </div>
        </Card>
      </div>
    </CardGroup>
    <p>
      If you have any questions or if you want to unsubscribe, please contact us at
       
      <a
        href="mailto:support@gorgias.com"
      >
        support@gorgias.com
      </a>
       
      or
       
      <a
        href=""
        onClick={[Function]}
      >
        Live Chat
      </a>
      .
    </p>
  </div>
</BillingUsage>
`;

exports[`BillingUsage component should load with empty props 1`] = `
<BillingUsage
  activeIntegrations={Immutable.List []}
  currentPlan={
    Immutable.Map {
      "name": "Pro",
      "free_tickets": 10,
      "integrations": 5,
      "interval": "month",
    }
  }
  currentSubscription={
    Immutable.Map {
      "start_datetime": "2018-01-01T10:10:10.480Z",
    }
  }
  currentUsage={
    Immutable.Map {
      "meta": Immutable.Map {
        "start_datetime": "2010-10-10",
        "end_datetime": "2010-10-11",
      },
    }
  }
  fetchCurrentUsage={[Function]}
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        insert_chart
      </i>
       Usage & Plans
    </h4>
    <CardGroup
      className="mb-2"
      tag="div"
    >
      <div
        className="mb-2 card-group"
      >
        <Card
          className="current-plan Pro"
          tag="div"
        >
          <div
            className="current-plan Pro card"
          >
            <CardBody
              tag="div"
            >
              <div
                className="card-body"
              >
                <LegacyTag
                  className="usagePlans"
                  label="Legacy Plan"
                  labelIcon="warning"
                >
                  <div
                    className="legacyPlanTag usagePlans"
                  >
                    <i
                      className="material-icons"
                    >
                      warning
                    </i>
                    <div
                      className="legacyPlanTagLabel"
                    >
                      Legacy Plan
                    </div>
                  </div>
                </LegacyTag>
                <h4>
                  Pro monthly plan
                </h4>
                <div>
                  Your current subscription started on
                   
                  <strong>
                    Jan 01
                  </strong>
                  .
                </div>
              </div>
            </CardBody>
          </div>
        </Card>
        <Card
          className="text-center"
          tag="div"
        >
          <div
            className="text-center card"
          >
            <CardBody
              tag="div"
            >
              <div
                className="card-body"
              >
                <Row
                  tag="div"
                >
                  <div
                    className="row"
                  >
                    <Col
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="col-sm-3"
                      >
                        <div>
                          <div
                            className="usage-numbers"
                          >
                            0
                            /
                            10
                             tickets
                             
                            <a
                              id="current-period"
                            >
                              <i
                                className="material-icons text-muted"
                              >
                                info_outline
                              </i>
                            </a>
                          </div>
                          <UncontrolledTooltip
                            target="current-period"
                          >
                            <Tooltip
                              autohide={true}
                              delay={
                                Object {
                                  "hide": 250,
                                  "show": 0,
                                }
                              }
                              hideArrow={false}
                              isOpen={false}
                              placement="top"
                              placementPrefix="bs-tooltip"
                              target="current-period"
                              toggle={[Function]}
                            />
                          </UncontrolledTooltip>
                          <Progress
                            className="usage-progress"
                            max={100}
                            multi={true}
                            tag="div"
                            value={0}
                          >
                            <div
                              className="usage-progress progress"
                            >
                              <Progress
                                bar={true}
                                color="primary"
                                max={100}
                                tag="div"
                                value={100}
                              >
                                <div
                                  aria-valuemax={100}
                                  aria-valuemin="0"
                                  aria-valuenow={100}
                                  className="progress-bar bg-primary"
                                  role="progressbar"
                                  style={
                                    Object {
                                      "width": "100%",
                                    }
                                  }
                                />
                              </Progress>
                            </div>
                          </Progress>
                          <div>
                            $
                            0
                             extra cost
                          </div>
                        </div>
                      </div>
                    </Col>
                    <Col
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="col-sm-3"
                      >
                        <div>
                          <div
                            className="usage-numbers"
                          >
                            0
                            /
                            5
                             
                            <Link
                              to="/app/settings/integrations"
                            >
                              <a
                                to="/app/settings/integrations"
                              >
                                integrations
                              </a>
                            </Link>
                             
                            <a
                              id="integrations-consumed"
                            >
                              <i
                                className="material-icons text-muted"
                              >
                                info_outline
                              </i>
                            </a>
                            <UncontrolledTooltip
                              target="integrations-consumed"
                            >
                              <Tooltip
                                autohide={true}
                                delay={
                                  Object {
                                    "hide": 250,
                                    "show": 0,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="integrations-consumed"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </div>
                          <Progress
                            className="usage-numbers"
                            max={100}
                            multi={true}
                            tag="div"
                            value={0}
                          >
                            <div
                              className="usage-numbers progress"
                            >
                              <Progress
                                bar={true}
                                color="primary"
                                max={100}
                                tag="div"
                                value={100}
                              >
                                <div
                                  aria-valuemax={100}
                                  aria-valuemin="0"
                                  aria-valuenow={100}
                                  className="progress-bar bg-primary"
                                  role="progressbar"
                                  style={
                                    Object {
                                      "width": "100%",
                                    }
                                  }
                                />
                              </Progress>
                            </div>
                          </Progress>
                        </div>
                      </div>
                    </Col>
                    <Col
                      className="plan-usage-reset"
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="plan-usage-reset col-sm-3"
                      >
                        <div>
                          <strong>
                            Usage reset on:
                          </strong>
                        </div>
                        <div>
                          Oct 11
                        </div>
                      </div>
                    </Col>
                    <Col
                      className="plan-button"
                      sm="3"
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="plan-button col-sm-3"
                      >
                        <Button
                          color="secondary"
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="button"
                          >
                            Update plan
                          </button>
                        </Button>
                      </div>
                    </Col>
                  </div>
                </Row>
              </div>
            </CardBody>
          </div>
        </Card>
      </div>
    </CardGroup>
    <p>
      If you have any questions or if you want to unsubscribe, please contact us at
       
      <a
        href="mailto:support@gorgias.com"
      >
        support@gorgias.com
      </a>
       
      or
       
      <a
        href=""
        onClick={[Function]}
      >
        Live Chat
      </a>
      .
    </p>
  </div>
</BillingUsage>
`;
